--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,3 @@
-
-html {
-  scroll-behavior: smooth;
-}
-
-
-@import "tailwindcss";
-@keyframes rotateSkills {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
